ex4/testdata/typechecker/ok/NestedVars2.java
class MainClass{
    public static void main(String[] args){
        if (3 < 4) {
            int x;
            x = 5;
        } else {
            boolean x;
            x = true;
        }
    }
}

