ex4/testdata/typechecker/error/ThisInMain.java
class Wuff {
    public static void main(String[] args) {
        int x;
        if (this == null) {

        } else {

        }
    }
}